@@ -1,8 +1,10 @@
 use std::sync::mpsc::Sender;
-use std::process::Command;
 use stealthy::Message;
 use crate::model::ItemType;
 use crate::model::Item;
+
+#[cfg(not(feature = "no_notify"))]
+use std::process::Command;
 
 pub enum ConsoleMessage {
     TextMessage(Item),
@@ -47,6 +49,18 @@ pub fn ack_msg(o: Sender<ConsoleMessage>, id: u64) {
     o.send(ConsoleMessage::Ack(id)).expect("Error");
 }
 
+#[cfg(not(feature = "no_notify"))]
+fn notify(ip: String, o: Sender<ConsoleMessage>) {
+    // TODO configure the command
+    if Command::new("notify-send")
+        .arg("-t")
+        .arg("3000")
+        .arg(format!("new message from {}", ip))
+        .status().is_err() {
+        msg(o, format!("calling notify-send failed"), ItemType::Error);
+    }
+}
+
 pub fn new_msg(o: Sender<ConsoleMessage>, m: Message) {
 
     let ip = m.get_ip();
@@ -56,14 +70,8 @@ pub fn new_msg(o: Sender<ConsoleMessage>, m: Message) {
         Ok(s)  => {
             msg(o.clone(), format!("[{}] {}", ip, s), ItemType::Received);
 
-            // TODO configure the command
-            if Command::new("notify-send")
-                .arg("-t")
-                .arg("3000")
-                .arg(format!("new message from {}", ip))
-                .status().is_err() {
-                msg(o, format!("calling notify-send failed"), ItemType::Error);
-            }
+            #[cfg(not(feature = "no_notify"))]
+            notify(ip, o);
         }
         Err(_) => {
             msg(o, format!("[{}] error: could not decode message", ip), ItemType::Error);
